changed d broken link on home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<div class="navbar navbar-default">
+<div class="navbar navbar-fixed-top">
     <a href="index.html" class="navbar-brand">
       Modernist Looking
     </a>
@@ -53,8 +53,8 @@
       </div>
 
     <div class="col-md-3">
-      <h3><a href="notes.html">Notes</a></h3>
-      <p>Don't turn around<br>'Cause you're gonna see my heart breaking.</p>
+      <h3><a href="connect.html">Only Connect</a></h3>
+      <p>'That isn't all the house really, but it's all that one notices—nine windows as you look up from the front garden.'<br>Chapter 1, <em>Howards End</em> by E.M. Forster</p>
       </div>
   </div>
   <a href="https://twitter.com/jojokarlin " class="btn btn-info">Tweet</a>
