--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="col-md-3">
       <h3><a href="syllabus.html">Syllabus</a></h3>
-      <p>Every now and then I get a little bit restless and I dream of something wild</p>
+      <p>And the Prince's undirected thought was not a little symptomatic, since, though the turn of the season had come and the flush of the streets begun to fade, the possibilities of faces, on the August afternoon, were still one of the notes of the scene.<br>Part I, Chapter 1<br><em>The Golden Bowl</em>by Henry James</p>
       </div>
 
     <div class="col-md-3">
@@ -57,7 +57,7 @@
       <p>'That isn't all the house really, but it's all that one notices—nine windows as you look up from the front garden.'<br>Chapter 1, <em>Howards End</em> by E.M. Forster</p>
       </div>
   </div>
-  <a href="https://twitter.com/jojokarlin " class="btn btn-info">Tweet</a>
+  <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a>
 </div>
 
 
