corrected em dash and navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
       Modernist Looking
     </a>
@@ -49,15 +49,17 @@
 
     <div class="col-md-3">
       <h3><a href="syllabus.html">Syllabus</a></h3>
-      <p>And the Prince's undirected thought was not a little symptomatic, since, though the turn of the season had come and the flush of the streets begun to fade, the possibilities of faces, on the August afternoon, were still one of the notes of the scene.<br>Part I, Chapter 1<br><em>The Golden Bowl</em>by Henry James</p>
+      <p>`And the Prince's undirected thought was not a little symptomatic, since, though the turn of the season had come and the flush of the streets begun to fade, the possibilities of faces, on the August afternoon, were still one of the notes of the scene.'<br>Part I, Chapter 1<br><em>The Golden Bowl</em> by Henry James</p>
       </div>
 
     <div class="col-md-3">
       <h3><a href="connect.html">Only Connect</a></h3>
-      <p>'That isn't all the house really, but it's all that one notices—nine windows as you look up from the front garden.'<br>Chapter 1, <em>Howards End</em> by E.M. Forster</p>
+      <p>'That isn't all the house really, but it's all that one notices&mdash;nine windows as you look up from the front garden.'<br>Chapter 1<br> <em>Howards End</em> by E.M. Forster</p>
       </div>
   </div>
+  <div>
   <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a>
+</div>
 </div>
 
 
