--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <center>
       <div class="jumbotron">
-	<h1>Modernist Turnings</h1>
+	<h1>Modernist Looking</h1>
 	<p>For everything, turn, turn,</p>
 	<a href="https://youtu.be/W4ga_M5Zdn4" class="btn btn-info">turn...</a>
 	
