--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
 
 <div class="container">
+  <center>
   <div class="row">
     <div class="col-md-3">
       <h3><a href="about.html">About</a></h3>
