fixed column width on home page

--- a/index.html
+++ b/index.html
@@ -43,22 +43,23 @@
 <div class="container">
   <center>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <h3><a href="about.html">About</a></h3>
       <p>Professor <a href="http://www.maryanncaws.com/">Mary Ann Caws</a> leads a seminar on the turnings around, about, to and from in works from Henry James's <em>The Golden Bowl</em> to works of Baron Corvo to Virginia Woolf's <em>To The Lighthouse</em> and <em>Between the Acts</em>.</p>
       </div>
 
-    <div class="col-md-3">
+    <div class="col-md-4">
       <h3><a href="syllabus.html">Syllabus</a></h3>
       <p>`And the Prince's undirected thought was not a little symptomatic, since, though the turn of the season had come and the flush of the streets begun to fade, the possibilities of faces, on the August afternoon, were still one of the notes of the scene.'<br>Part I, Chapter 1<br><em>The Golden Bowl</em> by Henry James</p>
       </div>
 
-    <div class="col-md-3">
+    <div class="col-md-4">
       <h3><a href="connect.html">Only Connect</a></h3>
       <p>'That isn't all the house really, but it's all that one notices&mdash;nine windows as you look up from the front garden.'<br>Chapter 1<br> <em>Howards End</em> by E.M. Forster</p>
       </div>
   </div>
   <div>
+    <center>
   <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a>
 </div>
 </div>
