--- a/syllabus.html
+++ b/syllabus.html
@@ -29,6 +29,7 @@
     </div>
     </div>
 <div class="container">
+<img src="images/woolf.jpeg" class="img-responsive" class="img-rounded" alt="Virginia"><br>
 <p>Modernist Turning TENTATIVE CALENDAR
 <br>
 February 25  still <a href="https://archive.org/details/pierreortheambig34970gut">Pierre</a>
@@ -58,5 +59,5 @@ May 12  <a href="http://www.bhcc.mass.edu/media/03-documents/House-Taken-Over.pd
 May 19 TALK DAY (about your paper)</p>
 </div>
 <div class="container">
-<img src="images/woolf.jpeg" class="img-responsive" class="img-rounded" alt="Virginia">
+<img src="images/blooms.jpg" class="img-responsive" class="img-rounded" alt="blooms">
 </div>
