started the bootstrap site for letters

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
-      Modernist Looking
+      War Correspondence
     </a>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-    <div class="collapse navbar-collapse navHeaderCollapse">
+   <div class="collapse navbar-collapse navHeaderCollapse">
       <ul class="nav navbar-nav navbar-left">
-	<li class="active"><a href="index.html">Home</a> </li>
-	<li><a href="about.html">About</a> </li>
-	<li><a href="syllabus.html">Syllabus</a> </li>
-	<li><a href="connect.html">Only Connect</a> </li>
+  <li class="active"><a href="index.html">Home</a> </li>
+  <li><a href="about.html">About</a> </li>
+  <li><a href="read.html">Read the Letters</a> </li>
+  <li><a href="contact.html">Contact</a> </li>
       </ul>
     </div>
     </div>
@@ -32,8 +32,8 @@
     <div class="container">
       <center>
       <div class="jumbotron">
-	<h1>Modernist Looking</h1>
-	<p>For everything, turn, turn,</p>
+	<h1>Lives in Letters</h1>
+	<p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
 	<a href="https://youtu.be/W4ga_M5Zdn4" class="btn btn-info">turn...</a>
 	
       </div>
@@ -44,7 +44,7 @@
    <div class="row">
     <div class="col-md-4">
       <h3><a href="about.html">About</a></h3>
-      <p>Professor <a href="http://www.maryanncaws.com/">Mary Ann Caws</a> leads a seminar on the turnings around, about, to and from in works from Henry James's <em>The Golden Bowl</em> to works of Baron Corvo to Virginia Woolf's <em>To The Lighthouse</em> and <em>Between the Acts</em>.</p>
+      <p><em>Lives in Letters</em> is a digital edition of the letters of Harold and Lenore Karlin during the time they were apart while Harold was overseas as an army doctor stationed in Europe.</p>
       </div>
 
     <div class="col-md-4">
