--- a/read.html
+++ b/read.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>War Correspondence</title>
+  <title>Lives in Letters</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"> 
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
-      War Correspondence
+      Lives in Letters
     </a>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
