fixed bugs in index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Modernist Looking</title>
+  <title>Lives in Letters</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"> 
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
-      War Correspondence
+      Lives in Letters
     </a>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
@@ -32,10 +32,10 @@
     <div class="container">
       <center>
       <div class="jumbotron">
-	<h1>Lives in Letters</h1>
-	<p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
-	<a href="https://youtu.be/W4ga_M5Zdn4" class="btn btn-info">turn...</a>
-	
+  <h1>Lives in Letters</h1>
+  <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
+  <a href="https://lifeletters.omeka.net" class="btn btn-info">see Omeka archive</a>
+  
       </div>
       </center>
     </div>
@@ -48,18 +48,18 @@
       </div>
 
     <div class="col-md-4">
-      <h3><a href="syllabus.html">Syllabus</a></h3>
+      <h3><a href="lives.html">Lives</a></h3>
       <p>`And the Prince's undirected thought was not a little symptomatic, since, though the turn of the season had come and the flush of the streets begun to fade, the possibilities of faces, on the August afternoon, were still one of the notes of the scene.'<br>Part I, Chapter 1<br><em>The Golden Bowl</em> by Henry James</p>
       </div>
 
     <div class="col-md-4">
-      <h3><a href="connect.html">Only Connect</a></h3>
-      <p>'That isn't all the house really, but it's all that one notices&mdash;nine windows as you look up from the front garden.'<br>Chapter 1<br> <em>Howards End</em> by E.M. Forster</p>
+      <h3><a href="contact.html">Contact</a></h3>
+      <p>For information about the project, contact Jojo Karlin. <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a></p>
       </div>
   </div>
   <div>
     <center>
-  <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a>
+  
 </div>
 </div>
 
