swapped an image

--- a/read.html
+++ b/read.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Lives in Letters</title>
+  <title>Life in Letters</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"> 
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
-      Lives in Letters
+      Life in Letters
     </a>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
@@ -21,15 +21,15 @@
       </button>
     <div class="collapse navbar-collapse navHeaderCollapse">
       <ul class="nav navbar-nav navbar-left">
-	<li class="active"><a href="index.html">Home</a> </li>
-	<li><a href="about.html">About</a> </li>
-	<li><a href="read.html">Read the Letters</a> </li>
-	<li><a href="contact.html">Contact</a> </li>
+  <li class="active"><a href="index.html">Home</a> </li>
+  <li><a href="about.html">About</a> </li>
+  <li><a href="read.html">Read the Letters</a> </li>
+  <li><a href="contact.html">Contact</a> </li>
       </ul>
     </div>
     </div>
 <div class="container">
-<img src="images/woolf.jpeg" class="img-responsive" class="img-rounded" alt="Virginia"><br>
+<img src="images/HKLK_uniform.jpeg" class="img-responsive" class="img-rounded" alt="Virginia"><br>
 <p>Letters
 <br>
 </div>
