--- a/read.html
+++ b/read.html
@@ -29,7 +29,7 @@
     </div>
     </div>
 <div class="container">
-<img src="images/HKLK_uniform.jpeg" class="img-responsive" class="img-rounded" alt="Virginia"><br>
+<img src="images/HKLK_uniform.jpg" class="img-responsive" class="img-rounded" alt="Virginia"><br>
 <p>Letters
 <br>
 </div>
