--- a/read.html
+++ b/read.html
@@ -12,7 +12,7 @@
 
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
-      Life in Letters
+      Lives in Letters
     </a>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
