--- a/about.html
+++ b/about.html
@@ -49,6 +49,6 @@ As a platform for making materials available for public transcription of histori
 </p>
 </div>
 <div class="container">
-<a href="http://www.gc.cuny.edu/Page-Elements/Academics-Research-Centers-Initiatives/Doctoral-Programs/English/Courses/Spring-2016#Caws" class="btn btn-info">see more!</a>
+<a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">see the letters on The CUNY Academic Commons!</a>
 </div>
 </p>
