--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="jumbotron">
   <h1>Lives in Letters</h1>
   <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
-  <a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a>
+  <a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info"> <br> on the CUNY Academic Commons</a>
   
       </div>
       </center>
