--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
       <div class="jumbotron">
   <h1>Lives in Letters</h1>
   <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
-  <a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> <br>
-  <a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a>
-  
+  <p><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> </p>
+<p><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a>
       </div>
       </center>
     </div>
