fixed about page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="col-md-4">
       <h3><a href="lives.html">Lives</a></h3>
-      <p>`And the Prince's undirected thought was not a little symptomatic, since, though the turn of the season had come and the flush of the streets begun to fade, the possibilities of faces, on the August afternoon, were still one of the notes of the scene.'<br>Part I, Chapter 1<br><em>The Golden Bowl</em> by Henry James</p>
+      <p>By tracking the timelines of these letters, you can observe the time of communication.</p>
       </div>
 
     <div class="col-md-4">
