fixed about page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <div class="container">
       <center>
+    <div class="container-fluid">
   <h1>Lives in Letters</h1>
   <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
   <p><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> </p>
@@ -43,7 +44,7 @@
    <div class="row">
     <div class="col-md-4">
       <h3><a href="about.html">About</a></h3>
-      <p><em>Lives in Letters</em> is a digital edition of the letters of Harold and Lenore Karlin during the time they were apart while Harold was overseas as an army doctor stationed in Europe.</p>
+      <p><em>Liveclass="container-fluid">s in Letters</em> is a digital edition of the letters of Harold and Lenore Karlin during the time they were apart while Harold was overseas as an army doctor stationed in Europe.</p>
       </div>
 
     <div class="col-md-4">
