--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
 
     <div class="container">
+    <right>
   <h1>Lives in Letters</h1>
   <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
   <p><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> </p>
