--- a/index.html
+++ b/index.html
@@ -26,15 +26,10 @@
   <li><a href="about.html">About</a> </li>
   <li><a href="read.html">Read the Letters</a> </li>
   <li><a href="contact.html">Contact</a> </li>
+  <li><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a></li>
+  <li><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a></li>
       </ul>
     </div>
-    </div>
-
-    <div class="container">
-      <p><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> </p>
-<p><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a>
-      </div>
-      </center>
     </div>
 
 <div class="container">
