--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
       <h1>Lives in Letters</h1>
-    </a>
-    <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
+    The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>  </a>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
