--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 <div class="navbar navbar-default">
     <a href="index.html" class="navbar-brand">
       <h1>Lives in Letters</h1>
-    The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>  </a>
+    </a>
+    <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
    <div class="collapse navbar-collapse navHeaderCollapse">
-      <ul class="nav navbar-nav navbar-left">
+      <ul class="nav navbar-nav navbar-center">
   <li class="active"><a href="index.html">Home</a> </li>
   <li><a href="about.html">About</a> </li>
   <li><a href="read.html">Read the Letters</a> </li>
   <li><a href="contact.html">Contact</a> </li>
-  <li><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a></li>
-  <li><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a></li>
+  <li><a href="https://lifeletters.omeka.net" class="btn btn-info"> on Omeka</a></li>
+  <li><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info"> on the CUNY Academic Commons</a></li>
       </ul>
     </div>
     </div>
