--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <li><a href="about.html">About</a> </li>
   <li><a href="read.html">Read the Letters</a> </li>
   <li><a href="contact.html">Contact</a> </li>
-  <li><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a></li>
-  <li><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a>
+  <li><a href="https://lifeletters.omeka.net" >on Omeka</a></li>
+  <li><a href="https://letters.commons.gc.cuny.edu/" >on the CUNY Academic Commons</a>
       </ul>
     </div>
     </div>
@@ -52,7 +52,7 @@
 
     <div class="col-md-4">
       <h3><a href="contact.html">Contact</a></h3>
-      <p>For information about the project, contact Jojo Karlin. <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a></p>
+      <p>For information about the project, contact Jojo Karlin.<br><br> <a href="https://twitter.com/jojokarlin " class="btn btn-info">Jojo tweets</a></p>
       </div>
   </div>
   <div>
