--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,11 @@
     <div class="collapse navbar-collapse navHeaderCollapse">
       <ul class="nav navbar-nav navbar-left">
   <li class="active"><a href="index.html">Home</a> </li>
-  <li><a href="about.html">About</a> </li>
-  <li><a href="read.html">Read the Letters</a> </li>
-  <li><a href="contact.html">Contact</a> </li>
+  <li class="active"><a href="about.html">About</a> </li>
+  <li class="active"><a href="read.html">Read the Letters</a> </li>
+  <li class="active"><a href="contact.html">Contact</a> </li>
+  <li class="active"><a href="https://lifeletters.omeka.net" >on Omeka</a></li>
+  <li class="active"><a href="https://letters.commons.gc.cuny.edu/" >on the CUNY Academic Commons</a>
       </ul>
     </div>
     </div>
