--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
+       <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
       </button>
     <div class="collapse navbar-collapse navHeaderCollapse">
        <ul class="nav navbar-nav navbar-left">
