put the jumbotron back

--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
       <span class="icon-bar"></span>
       </button>
    <div class="collapse navbar-collapse navHeaderCollapse">
-      <ul class="nav navbar-nav navbar-left">
+       <ul class="nav navbar-nav navbar-left">
   <li class="active"><a href="index.html">Home</a> </li>
-  <li class="active">><a href="about.html">About</a> </li>
-  <li class="active">><a href="read.html">Read the Letters</a> </li>
-  <li class="active">><a href="contact.html">Contact</a> </li>
-  <li class="active">><a href="https://lifeletters.omeka.net" >on Omeka</a></li>
-  <li class="active">><a href="https://letters.commons.gc.cuny.edu/" >on the CUNY Academic Commons</a>
+  <li class="active"><a href="about.html">About</a> </li>
+  <li class="active"><a href="read.html">Read the Letters</a> </li>
+  <li class="active"><a href="contact.html">Contact</a> </li>
+  <li class="active"><a href="https://lifeletters.omeka.net" >on Omeka</a></li>
+  <li class="active"><a href="https://letters.commons.gc.cuny.edu/" >on the CUNY Academic Commons</a>
       </ul>
     </div>
     </div>
-<a>
-    The War Correspondence of Harold and Lenore Karlin, 1943-1945</a>
-    <div class="container">
+<div class="container">
+      <center>
+      <div class="jumbotron">
+  <h1>Lives in Letters</h1>
+  <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
       <p><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> </p>
 <p><a href="https://letters.commons.gc.cuny.edu/" class="btn btn-info">on the CUNY Academic Commons</a>
       </div>
