--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Lives in Letters</title>
+  <title>Life in Letters</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"> 
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -20,13 +20,12 @@
       <span class="icon-bar"></span>
       </button>
     <div class="collapse navbar-collapse navHeaderCollapse">
-      <ul class="nav navbar-nav navbar-left">
-  <li class="active"><a href="index.html">Home</a> </li>
-  <li class="active"><a href="about.html">About</a> </li>
-  <li class="active"><a href="read.html">Read the Letters</a> </li>
-  <li class="active"><a href="contact.html">Contact</a> </li>
-  <li class="active"><a href="https://lifeletters.omeka.net" >on Omeka</a></li>
-  <li class="active"><a href="https://letters.commons.gc.cuny.edu/" >on the CUNY Academic Commons</a>
+       <ul class="nav navbar-nav navbar-left">
+  <li><a href="about.html">About</a> </li>
+  <li><a href="read.html">Read the Letters</a> </li>
+  <li><a href="contact.html">Contact</a> </li>
+  <li><a href="https://lifeletters.omeka.net">on Omeka</a></li>
+  <li><a href="https://letters.commons.gc.cuny.edu/">on the CUNY Academic Commons</a>
       </ul>
     </div>
     </div>
