--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </div>
 <div class="container">
       <center>
-      <div class="jumbotron">
+      <div class="jumbotron jumbotron-causeway">
+  <left style="position: relative;left: 30px;">
   <h1>Lives in Letters</h1>
   <p>The War Correspondence of Harold and Lenore Karlin, 1943-1945</p>
       <p><a href="https://lifeletters.omeka.net" class="btn btn-info">on Omeka</a> </p>
